Cuisines served not showing: fixed

--- a/src/pages/venues/style.scss
+++ b/src/pages/venues/style.scss
@@ -374,7 +374,7 @@
   padding: 13px 45px;
   font-family: "Outfit";
   position: sticky;
-  top: 70px;
+  top: 80px;
 
   // z-index: 1;
   @media screen and (max-width: 550px) {
@@ -1738,7 +1738,7 @@
         a{
           // text-decoration: none;
           img{
-            height: 280px !important;
+            height: 320px !important;
             border: 1px solid #ea5329;
           }
         }
